[Fixes #1089] Fix text overflow in resource Delete dialog box (#1090)

--- a/geonode_mapstore_client/client/themes/geonode/less/_resource-card.less
+++ b/geonode_mapstore_client/client/themes/geonode/less/_resource-card.less
@@ -296,3 +296,13 @@ button.btn.btn-default.gn-resource-status.gn-status-button {
         box-shadow: unset;
     }
 }
+
+@media screen and (min-width: 1649px) {
+    .gn-resource-card {
+        .card-resource-list {
+            .gn-resource-card-body-wrapper {
+                width: 10vw;
+            }
+        }
+    }
+}
